Excel file uploader: users can import excel data into database
user attached file will be converted to data.xslx. Saved into data/ and is used to update database

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "==2.18.1",
     "prop-types": "==15.6.0",
     "react": "==16.1.0",
-    "react-dom": "==16.0.1"
+    "react-dom": "==16.0.1",
+    "react-file-reader": "^1.1.4"
   }
 }
